2015-01-28  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (bind_macro_params): Bugfix: the colon argument's special
	meaning "treat the argument as missing" must apply only to optional
	parameters.

2015-01-27  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (make_like): Fix regression introduced in 102.
	A one element list being converted to a string
	treated as an empty list, leading to empty string.

2015-01-27  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (width): New function.

	* arith.h (width): Declared.

	* eval.c (eval_init): Width registered as intrisinc.

	* txr.1: Documented width.

2015-01-25  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (call_f): New global variable.
	(do_mapf, mapf): New static functions.
	(eval_init): Protect call_f from gc, and initialize it.
	Re-register call function using call_f.
	Register mapf intrinsic.

	* txr.1: Documented mapf.

2015-01-25  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register dupl and swap_12_21 as
	the dup and flip intrinsics.

	* lib.c (do_dup): New static function.
	(dupl): New function.

	* lib.h (dupl): Declared.

	* txr.1: Documented dup and flip.

2015-01-24  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (callf): New static function.
	(eval_init): callf registered.

	* txr.1: Documented callf.

2015-01-22  Kaz Kylheku  <kaz@kylheku.com>

	Basic implementation of constantp. Does not
	recognize forms like (+ 2 2) as constant.

	* eval.c (constantp_noex, constantp): New functions.
	(eval_init): Registered constantp as intrinsic.

	* tl.vim, txr.vim: Updated.

	* txr.1: Documented constantp.

2015-01-21  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (get_string): New argument, close_after_p.
	Close the stream unless close_after_p is specified and is nil,
	or when it is missing, an there is no compatibility or it's
	newer than version 102.

	* stream.h (get_string): Updated declartion.

	* txr.1: Documented default closing behavior of get-string
	and the new optional argument for overriding it.
