@@ -1,5 +1,12 @@
 2015-01-28  Kaz Kylheku  <kaz@kylheku.com>
 
+	* eval.c (get_opt_param_syms): Fix broken function. This
+	was choking on keywords like :env in the lambda list,
+	and failing to handle the nested patterns of macro
+	lambda lists. Failing case: (defmacro x (: opt :env foo)).
+
+2015-01-28  Kaz Kylheku  <kaz@kylheku.com>
+
 	* eval.c (bind_macro_params): Bugfix: the colon argument's special
 	meaning "treat the argument as missing" must apply only to optional
 	parameters.
